// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots containers/Recording/components/metrics/FullMetrics Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      Object {
        "paddingHorizontal": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "height": 0,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "height": 31.61137440758294,
          "paddingHorizontal": 76.92307692307692,
          "width": "100%",
        },
        Object {
          "height": 94.83412322274881,
        },
        undefined,
      ]
    }
  />
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 23.076923076923077,
            "height": 195.99052132701422,
            "justifyContent": "flex-start",
            "padding": 25.28909952606635,
            "width": 328.84615384615387,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={50.5781990521327}
          bbWidth={50.5781990521327}
          focusable={false}
          height={50.5781990521327}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 50,
                "width": 50,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={50.5781990521327}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M15.52 28.097c6.304 0 11.52-5.215 11.52-11.52 0-2.52-.845-4.863-2.25-6.773l.89-.89c.293-.294.457-.645.457-.985 0-.703-.563-1.266-1.278-1.266-.422 0-.715.117-1.007.41l-.832.809c-1.711-1.477-3.844-2.473-6.188-2.742V4.003c0-.738-.586-1.336-1.313-1.336a1.34 1.34 0 0 0-1.324 1.336V5.14C8.5 5.808 4 10.718 4 16.577c0 6.305 5.215 11.52 11.52 11.52Zm0-2.426a9.055 9.055 0 0 1-9.082-9.094 9.053 9.053 0 0 1 9.07-9.094 9.082 9.082 0 0 1 9.105 9.094 9.058 9.058 0 0 1-9.093 9.094Zm0-7.125a1.96 1.96 0 0 0 1.957-1.957c0-.738-.41-1.371-1.032-1.723V9.897a.916.916 0 0 0-.937-.925.913.913 0 0 0-.926.925v4.97c-.61.35-1.02.984-1.02 1.722 0 1.078.868 1.957 1.958 1.957Z"
              fill={4291180339}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            adjustsFontSizeToFit={false}
            numberOfLines={0}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 24,
                  "fontWeight": "600",
                  "lineHeight": 32,
                  "textAlign": "left",
                },
                Object {
                  "marginBottom": 6.322274881516588,
                  "marginTop": 12.644549763033176,
                },
              ]
            }
            testID="header1-test-id"
          >
            00:00:
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "alignSelf": "flex-end",
                    "paddingBottom": 3.161137440758294,
                  },
                  Object {
                    "marginBottom": 6.322274881516588,
                    "marginTop": 12.644549763033176,
                  },
                ],
              ]
            }
            testID="header3-test-id"
          >
            00
          </Text>
        </View>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="body-secondary-test-id"
        >
          MainCounter.metrics.full.time
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 23.076923076923077,
            "height": 195.99052132701422,
            "justifyContent": "flex-start",
            "padding": 25.28909952606635,
            "width": 328.84615384615387,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={50.5781990521327}
          bbWidth={50.5781990521327}
          focusable={false}
          height={50.5781990521327}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 50,
                "width": 50,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={50.5781990521327}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M5.333 26.667h18.278A4.389 4.389 0 0 0 28 22.278v0a4.389 4.389 0 0 0-4.389-4.389h-8.404a3.611 3.611 0 0 1-3.611-3.61v0a3.611 3.611 0 0 1 3.611-3.612h4.631"
              propList={
                Array [
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={4291180339}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth="2.267"
            />
            <RNSVGCircle
              cx="5.333"
              cy="26.667"
              fill={4291180339}
              propList={
                Array [
                  "fill",
                ]
              }
              r="2.667"
            />
            <RNSVGPath
              clipRule={0}
              d="M26.667 10.666c2.209 0 4-3.538 4-5.6s-1.791-3.733-4-3.733c-2.21 0-4 1.671-4 3.733 0 2.062 1.79 5.6 4 5.6Zm0-4a1.333 1.333 0 1 0 0-2.666 1.333 1.333 0 0 0 0 2.666Z"
              fill={4291180339}
              fillRule={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          adjustsFontSizeToFit={false}
          numberOfLines={0}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 6.322274881516588,
                "marginTop": 12.644549763033176,
              },
            ]
          }
          testID="header1-test-id"
        >
          0.00
        </Text>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="body-secondary-test-id"
        >
          MainCounter.metrics.full.distance
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 31.61137440758294,
            "paddingHorizontal": 76.92307692307692,
            "width": "100%",
          },
          Object {
            "height": 25.28909952606635,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 23.076923076923077,
            "height": 195.99052132701422,
            "justifyContent": "flex-start",
            "padding": 25.28909952606635,
            "width": 328.84615384615387,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={50.5781990521327}
          bbWidth={50.5781990521327}
          focusable={false}
          height={50.5781990521327}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 50,
                "width": 50,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={50.5781990521327}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M28 22.667c0-1.31-.21-2.57-.598-3.75M4 22.667c0-6.627 5.373-12 12-12 3.128 0 5.977 1.197 8.113 3.158"
              fill={null}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                ]
              }
              stroke={4291180339}
              strokeLinecap={1}
              strokeWidth="2.267"
            />
            <RNSVGPath
              d="M16.94 23.799c-.78.531-1.73.495-2.123-.081-.393-.577-.08-1.475.7-2.007.78-.531 8.791-5.31 9.184-4.733.393.577-6.98 6.289-7.76 6.82Z"
              fill={4291180339}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          adjustsFontSizeToFit={false}
          numberOfLines={0}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 6.322274881516588,
                "marginTop": 12.644549763033176,
              },
            ]
          }
          testID="header1-test-id"
        >
          0.0
        </Text>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="body-secondary-test-id"
        >
          MainCounter.metrics.full.speed
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 23.076923076923077,
            "height": 195.99052132701422,
            "justifyContent": "flex-start",
            "padding": 25.28909952606635,
            "width": 328.84615384615387,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={50.5781990521327}
          bbWidth={50.5781990521327}
          focusable={false}
          height={50.5781990521327}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 50,
                "width": 50,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={50.5781990521327}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M28 22.667c0-1.31-.21-2.57-.598-3.75M4 22.667c0-6.627 5.373-12 12-12 3.128 0 5.977 1.197 8.113 3.158"
              propList={
                Array [
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                ]
              }
              stroke={4291180339}
              strokeLinecap={1}
              strokeWidth="2.267"
            />
            <RNSVGPath
              d="M16.94 23.799c-.78.531-1.73.495-2.123-.081-.393-.577-.08-1.475.7-2.007.78-.531 8.791-5.31 9.184-4.733.393.577-6.98 6.289-7.76 6.82ZM3.519 2.733c0 .311.252.563.545.563a.556.556 0 0 0 .416-.2l.662-.743a.639.639 0 0 0 .14-.405.614.614 0 0 0-.609-.615c-.17 0-.334.035-.492.264l-.545.797a.608.608 0 0 0-.117.34ZM1.333 8.991c0 .41.27.768.762 1.02.469.24 1.102.375 1.81.375 1.74 0 2.772-.791 2.772-2.074 0-.961-.533-1.541-1.664-1.776l-1.101-.223c-.487-.105-.698-.275-.698-.574 0-.345.293-.592.785-.592.323 0 .616.088 1.084.364.317.176.516.234.704.234.404 0 .685-.234.685-.621 0-.393-.281-.738-.785-.973-.445-.216-1.002-.328-1.588-.328-1.629 0-2.684.809-2.684 2.028 0 .955.551 1.535 1.758 1.787l.873.187c.574.13.832.346.832.656 0 .352-.328.563-.867.563-.433 0-.797-.129-1.295-.44-.31-.187-.48-.263-.697-.263-.41 0-.686.263-.686.65ZM9.683 9.26V6.859c0-.896.416-1.359 1.266-1.388.28-.012.498-.076.638-.194.153-.129.229-.316.229-.574 0-.264-.082-.469-.235-.61-.146-.14-.351-.21-.609-.21-.604 0-1.049.357-1.26 1.002h-.088v-.088c-.04-.568-.351-.873-.896-.873-.604 0-.926.369-.926 1.031v4.307c0 .656.305 1.031.92 1.031.61 0 .961-.375.961-1.031Z"
              fill={4291180339}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          adjustsFontSizeToFit={false}
          numberOfLines={0}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 6.322274881516588,
                "marginTop": 12.644549763033176,
              },
            ]
          }
          testID="header1-test-id"
        >
          0.0
        </Text>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="body-secondary-test-id"
        >
          MainCounter.metrics.full.averageSpeed
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": 31.61137440758294,
          "paddingHorizontal": 76.92307692307692,
          "width": "100%",
        },
        Object {
          "height": 25.28909952606635,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 30.76923076923077,
            "flexDirection": "row",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          Object {},
          Array [
            Object {
              "height": 92.3076923076923,
              "width": 565.3846153846154,
            },
            Object {
              "width": 386.53846153846155,
            },
          ],
          Object {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
      testID="secondary-btn-test-id"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 30.76923076923077,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
            undefined,
          ]
        }
        testID="secondary-btn-test-id-container"
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "mykross",
                "textAlign": "center",
              },
              Object {
                "color": "#C63733",
                "fontSize": 20,
              },
              Object {
                "marginRight": 15.384615384615385,
              },
            ]
          }
          testID="secondary-btn-test-id-icon"
        >
          O
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 18,
                "lineHeight": 28,
                "textAlign": "left",
              },
              Object {
                "color": "#C63733",
              },
            ]
          }
          testID="secondary-btn-test-id-text"
        >
          Pokaż mapę
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots containers/Recording/components/metrics/FullMetrics With tracker data 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      Object {
        "paddingHorizontal": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "height": 0,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "height": 31.61137440758294,
          "paddingHorizontal": 76.92307692307692,
          "width": "100%",
        },
        Object {
          "height": 94.83412322274881,
        },
        undefined,
      ]
    }
  />
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 23.076923076923077,
            "height": 195.99052132701422,
            "justifyContent": "flex-start",
            "padding": 25.28909952606635,
            "width": 328.84615384615387,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={50.5781990521327}
          bbWidth={50.5781990521327}
          focusable={false}
          height={50.5781990521327}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 50,
                "width": 50,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={50.5781990521327}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M15.52 28.097c6.304 0 11.52-5.215 11.52-11.52 0-2.52-.845-4.863-2.25-6.773l.89-.89c.293-.294.457-.645.457-.985 0-.703-.563-1.266-1.278-1.266-.422 0-.715.117-1.007.41l-.832.809c-1.711-1.477-3.844-2.473-6.188-2.742V4.003c0-.738-.586-1.336-1.313-1.336a1.34 1.34 0 0 0-1.324 1.336V5.14C8.5 5.808 4 10.718 4 16.577c0 6.305 5.215 11.52 11.52 11.52Zm0-2.426a9.055 9.055 0 0 1-9.082-9.094 9.053 9.053 0 0 1 9.07-9.094 9.082 9.082 0 0 1 9.105 9.094 9.058 9.058 0 0 1-9.093 9.094Zm0-7.125a1.96 1.96 0 0 0 1.957-1.957c0-.738-.41-1.371-1.032-1.723V9.897a.916.916 0 0 0-.937-.925.913.913 0 0 0-.926.925v4.97c-.61.35-1.02.984-1.02 1.722 0 1.078.868 1.957 1.958 1.957Z"
              fill={4291180339}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            adjustsFontSizeToFit={false}
            numberOfLines={0}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 24,
                  "fontWeight": "600",
                  "lineHeight": 32,
                  "textAlign": "left",
                },
                Object {
                  "marginBottom": 6.322274881516588,
                  "marginTop": 12.644549763033176,
                },
              ]
            }
            testID="header1-test-id"
          >
            00:00:
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "alignSelf": "flex-end",
                    "paddingBottom": 3.161137440758294,
                  },
                  Object {
                    "marginBottom": 6.322274881516588,
                    "marginTop": 12.644549763033176,
                  },
                ],
              ]
            }
            testID="header3-test-id"
          >
            00
          </Text>
        </View>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="body-secondary-test-id"
        >
          MainCounter.metrics.full.time
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 23.076923076923077,
            "height": 195.99052132701422,
            "justifyContent": "flex-start",
            "padding": 25.28909952606635,
            "width": 328.84615384615387,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={50.5781990521327}
          bbWidth={50.5781990521327}
          focusable={false}
          height={50.5781990521327}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 50,
                "width": 50,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={50.5781990521327}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M5.333 26.667h18.278A4.389 4.389 0 0 0 28 22.278v0a4.389 4.389 0 0 0-4.389-4.389h-8.404a3.611 3.611 0 0 1-3.611-3.61v0a3.611 3.611 0 0 1 3.611-3.612h4.631"
              propList={
                Array [
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={4291180339}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth="2.267"
            />
            <RNSVGCircle
              cx="5.333"
              cy="26.667"
              fill={4291180339}
              propList={
                Array [
                  "fill",
                ]
              }
              r="2.667"
            />
            <RNSVGPath
              clipRule={0}
              d="M26.667 10.666c2.209 0 4-3.538 4-5.6s-1.791-3.733-4-3.733c-2.21 0-4 1.671-4 3.733 0 2.062 1.79 5.6 4 5.6Zm0-4a1.333 1.333 0 1 0 0-2.666 1.333 1.333 0 0 0 0 2.666Z"
              fill={4291180339}
              fillRule={0}
              propList={
                Array [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          adjustsFontSizeToFit={false}
          numberOfLines={0}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 6.322274881516588,
                "marginTop": 12.644549763033176,
              },
            ]
          }
          testID="header1-test-id"
        >
          3,41
        </Text>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="body-secondary-test-id"
        >
          MainCounter.metrics.full.distance
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 31.61137440758294,
            "paddingHorizontal": 76.92307692307692,
            "width": "100%",
          },
          Object {
            "height": 25.28909952606635,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 23.076923076923077,
            "height": 195.99052132701422,
            "justifyContent": "flex-start",
            "padding": 25.28909952606635,
            "width": 328.84615384615387,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={50.5781990521327}
          bbWidth={50.5781990521327}
          focusable={false}
          height={50.5781990521327}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 50,
                "width": 50,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={50.5781990521327}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M28 22.667c0-1.31-.21-2.57-.598-3.75M4 22.667c0-6.627 5.373-12 12-12 3.128 0 5.977 1.197 8.113 3.158"
              fill={null}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                ]
              }
              stroke={4291180339}
              strokeLinecap={1}
              strokeWidth="2.267"
            />
            <RNSVGPath
              d="M16.94 23.799c-.78.531-1.73.495-2.123-.081-.393-.577-.08-1.475.7-2.007.78-.531 8.791-5.31 9.184-4.733.393.577-6.98 6.289-7.76 6.82Z"
              fill={4291180339}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          adjustsFontSizeToFit={false}
          numberOfLines={0}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 6.322274881516588,
                "marginTop": 12.644549763033176,
              },
            ]
          }
          testID="header1-test-id"
        >
          10.0
        </Text>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="body-secondary-test-id"
        >
          MainCounter.metrics.full.speed
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 23.076923076923077,
            "height": 195.99052132701422,
            "justifyContent": "flex-start",
            "padding": 25.28909952606635,
            "width": 328.84615384615387,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={50.5781990521327}
          bbWidth={50.5781990521327}
          focusable={false}
          height={50.5781990521327}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 50,
                "width": 50,
              },
            ]
          }
          vbHeight={32}
          vbWidth={32}
          width={50.5781990521327}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M28 22.667c0-1.31-.21-2.57-.598-3.75M4 22.667c0-6.627 5.373-12 12-12 3.128 0 5.977 1.197 8.113 3.158"
              propList={
                Array [
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                ]
              }
              stroke={4291180339}
              strokeLinecap={1}
              strokeWidth="2.267"
            />
            <RNSVGPath
              d="M16.94 23.799c-.78.531-1.73.495-2.123-.081-.393-.577-.08-1.475.7-2.007.78-.531 8.791-5.31 9.184-4.733.393.577-6.98 6.289-7.76 6.82ZM3.519 2.733c0 .311.252.563.545.563a.556.556 0 0 0 .416-.2l.662-.743a.639.639 0 0 0 .14-.405.614.614 0 0 0-.609-.615c-.17 0-.334.035-.492.264l-.545.797a.608.608 0 0 0-.117.34ZM1.333 8.991c0 .41.27.768.762 1.02.469.24 1.102.375 1.81.375 1.74 0 2.772-.791 2.772-2.074 0-.961-.533-1.541-1.664-1.776l-1.101-.223c-.487-.105-.698-.275-.698-.574 0-.345.293-.592.785-.592.323 0 .616.088 1.084.364.317.176.516.234.704.234.404 0 .685-.234.685-.621 0-.393-.281-.738-.785-.973-.445-.216-1.002-.328-1.588-.328-1.629 0-2.684.809-2.684 2.028 0 .955.551 1.535 1.758 1.787l.873.187c.574.13.832.346.832.656 0 .352-.328.563-.867.563-.433 0-.797-.129-1.295-.44-.31-.187-.48-.263-.697-.263-.41 0-.686.263-.686.65ZM9.683 9.26V6.859c0-.896.416-1.359 1.266-1.388.28-.012.498-.076.638-.194.153-.129.229-.316.229-.574 0-.264-.082-.469-.235-.61-.146-.14-.351-.21-.609-.21-.604 0-1.049.357-1.26 1.002h-.088v-.088c-.04-.568-.351-.873-.896-.873-.604 0-.926.369-.926 1.031v4.307c0 .656.305 1.031.92 1.031.61 0 .961-.375.961-1.031Z"
              fill={4291180339}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          adjustsFontSizeToFit={false}
          numberOfLines={0}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 24,
                "fontWeight": "600",
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 6.322274881516588,
                "marginTop": 12.644549763033176,
              },
            ]
          }
          testID="header1-test-id"
        >
          0.0
        </Text>
        <Text
          adjustsFontSizeToFit={false}
          style={
            Array [
              Object {
                "color": "#717171",
                "fontFamily": "DIN2014-Regular",
                "fontSize": 16,
                "lineHeight": 16,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="body-secondary-test-id"
        >
          MainCounter.metrics.full.averageSpeed
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": 31.61137440758294,
          "paddingHorizontal": 76.92307692307692,
          "width": "100%",
        },
        Object {
          "height": 25.28909952606635,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 30.76923076923077,
            "flexDirection": "row",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          Object {},
          Array [
            Object {
              "height": 92.3076923076923,
              "width": 565.3846153846154,
            },
            Object {
              "width": 386.53846153846155,
            },
          ],
          Object {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
      testID="secondary-btn-test-id"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 30.76923076923077,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
            undefined,
          ]
        }
        testID="secondary-btn-test-id-container"
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "mykross",
                "textAlign": "center",
              },
              Object {
                "color": "#C63733",
                "fontSize": 20,
              },
              Object {
                "marginRight": 15.384615384615385,
              },
            ]
          }
          testID="secondary-btn-test-id-icon"
        >
          O
        </Text>
        <Text
          adjustsFontSizeToFit={true}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 18,
                "lineHeight": 28,
                "textAlign": "left",
              },
              Object {
                "color": "#C63733",
              },
            ]
          }
          testID="secondary-btn-test-id-text"
        >
          Pokaż mapę
        </Text>
      </View>
    </View>
  </View>
</View>
`;
